search/y.output

state 0
	$accept: .input $end 
	searchPrefix: .    (5)

	PLUS  shift 6
	MINUS  shift 7
	.  reduce 5 (src line 41)

	input  goto 1
	searchParts  goto 2
	searchPart  goto 3
	searchPrefix  goto 4
	searchMustMustNot  goto 5

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  searchParts.    (1)

	.  reduce 1 (src line 21)


state 3
	searchParts:  searchPart.searchParts 
	searchParts:  searchPart.    (3)
	searchPrefix: .    (5)

	$end  reduce 3 (src line 30)
	PLUS  shift 6
	MINUS  shift 7
	.  reduce 5 (src line 41)

	searchParts  goto 8
	searchPart  goto 3
	searchPrefix  goto 4
	searchMustMustNot  goto 5

state 4
	searchPart:  searchPrefix.searchBase searchSuffix 

	STRING  shift 10
	PHRASE  shift 11
	.  error

	searchBase  goto 9

state 5
	searchPrefix:  searchMustMustNot.    (6)

	.  reduce 6 (src line 44)


state 6
	searchMustMustNot:  PLUS.    (7)

	.  reduce 7 (src line 50)


state 7
	searchMustMustNot:  MINUS.    (8)

	.  reduce 8 (src line 55)


state 8
	searchParts:  searchPart searchParts.    (2)

	.  reduce 2 (src line 26)


state 9
	searchPart:  searchPrefix searchBase.searchSuffix 
	searchSuffix: .    (14)

	BOOST  shift 14
	.  reduce 14 (src line 163)

	searchSuffix  goto 12
	searchBoost  goto 13

state 10
	searchBase:  STRING.    (9)
	searchBase:  STRING.COLON STRING 
	searchBase:  STRING.COLON PHRASE 

	COLON  shift 15
	.  reduce 9 (src line 61)


state 11
	searchBase:  PHRASE.    (10)

	.  reduce 10 (src line 84)


state 12
	searchPart:  searchPrefix searchBase searchSuffix.    (4)

	.  reduce 4 (src line 35)


state 13
	searchSuffix:  searchBoost.    (15)

	.  reduce 15 (src line 167)


state 14
	searchBoost:  BOOST.INT 

	INT  shift 16
	.  error


state 15
	searchBase:  STRING COLON.STRING 
	searchBase:  STRING COLON.PHRASE 

	STRING  shift 17
	PHRASE  shift 18
	.  error


state 16
	searchBoost:  BOOST INT.    (13)

	.  reduce 13 (src line 157)


state 17
	searchBase:  STRING COLON STRING.    (11)

	.  reduce 11 (src line 107)


state 18
	searchBase:  STRING COLON PHRASE.    (12)

	.  reduce 12 (src line 131)


12 terminals, 9 nonterminals
16 grammar rules, 19/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 13/30000
0 extra closures
11 shift entries, 2 exceptions
9 goto entries
3 entries saved by goto default
Optimizer space used: output 18/30000
18 table entries, 0 zero
maximum spread: 12, maximum offset: 12
